--- a/src/tpl/pages/example.html
+++ b/src/tpl/pages/example.html
@@ -7,6 +7,19 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
+    <div class="container">
+      <ul class="nav">
+        <a href='#'><li class="nav__item">Beaty</li></a>
+        <a href='#'><li class="nav__item">Sport</li></a>
+      </ul>
+
+      <img src="http://placehold.it/12x12" alt="" class='search-ico'>
+      <ul class="nav nav--right">
+        <a href='#'><li class="nav__item">category</li></a>
+      </ul>
+    </div>
+  </header>
   <div class="container">
     <h1>EVERY LIPSTICK COLOR YOU NEED IN YOUR MAKEUP BAG THIS SPRING</h1>
     <h5>Dark lips are so last season</h5>
@@ -41,8 +54,36 @@
         <p class="b-product__link">More: <span> 13 shades of gray</span></p>
       </div>
     </div>
+    <div class="b-category">
+      <div class="b-category__content">
+        <div class='b-category__heading'>
+            <div class="b-category__tag">Things to do</div>
+            <div class='date'>Feb 7, 2019</div>
+        </div>
+        <h2>Our anual list of the best new hotels in 2019 that'll make you want to check in asap </h2>
+        <p>From seatle to savannah, these are the new hotspots</p>
+        <p class='author'>Jill Fergus</p>
+      </div>
+      <img src="http://placehold.it/590x298" alt="" class="b-category__img">
+    </div>
+    <div class="b-category">
+      <div class="b-category__content">
+        <div class='b-category__heading'>
+            <div class="b-category__tag">Things to do</div>
+            <div class='date'>Feb 7, 2019</div>
+        </div>
+        <h2>Our anual list of the best new hotels in 2019 that'll make you want to check in asap </h2>
+        <p>From seatle to savannah, these are the new hotspots</p>
+        <p class='author'>Jill Fergus</p>
+      </div>
+      <img src="http://placehold.it/590x298" alt="" class="b-category__img">
+    </div>
   </div>
-
+  <footer>
+    <div class="container">
+      <img class='footer__logo' src="/src/images/logo-social.png" alt="">
+    </div>
+  </footer>
 
 </body>
 </html>
